wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: kuberkid
  labels:
    tier: frontend
    app.kubernetes.io/managed-by: Helm  # <-- Etiqueta para que Helm lo gestione
  annotations:
    meta.helm.sh/release-name: mi-aplicacion  
    meta.helm.sh/release-namespace: kuberkid  # <-- Anotación para vincular al namespace correcto

  uid: fcfa0802-cec1-4a05-bdaa-d0f3f322b6c4
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-02-09T01:21:29+01:00"
      creationTimestamp: null
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - env:
        - name: WORDPRESS_DB_HOST
          value: mysql:3306
        - name: WORDPRESS_DB_NAME
          value: wordpress_db
        - name: WORDPRESS_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: secret-wordpress
        - name: WORDPRESS_DB_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: secret-wordpress
        image: wordpress
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 60
          periodSeconds: 20
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 10
        name: wordpress
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 45
          periodSeconds: 15
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 800Mi
          requests:
            cpu: 200m
            memory: 600Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/www/html
          name: wordpress-volume
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: minikube
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: wordpress-volume
        persistentVolumeClaim:
          claimName: pvc
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-02-08T22:47:06Z"
    lastUpdateTime: "2025-02-08T22:47:06Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-02-09T00:31:30Z"
    lastUpdateTime: "2025-02-09T00:31:30Z"
    message: ReplicaSet "wordpress-8669869fdd" has timed out progressing.
    reason: ProgressDeadlineExceeded
    status: "False"
    type: Progressing
  observedGeneration: 19
  readyReplicas: 2
  replicas: 3
  unavailableReplicas: 1
  updatedReplicas: 1
