wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: kuberkid
  labels:
    app.kubernetes.io/managed-by: Helm  
  annotations:
    meta.helm.sh/release-name: mi-aplicacion  
    meta.helm.sh/release-namespace: kuberkid  
  resourceVersion: "41957"
  uid: 5d773cd6-fe4e-4948-987c-a053730bf5f9
spec:
  ingressClassName: nginx
  rules:
  - host: wordpress.local
    http:
      paths:
      - backend:
          service:
            name: wordpress-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.49.2
